--- a/Windows/SettingsWindow.xaml
+++ b/Windows/SettingsWindow.xaml
@@ -85,6 +85,14 @@
                     <CheckBox  Margin="0 12 0 0" VerticalAlignment="Center" IsChecked="{Binding Path=(local:Config.RunAsAdmin), Mode=TwoWay}">
                         <TextBlock Text="Require Administrator" Margin="-4,0" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" FontSize="18" TextAlignment="Left"/>
                     </CheckBox>
+
+                    <CheckBox  Margin="0 12 0 0" VerticalAlignment="Center" IsChecked="{Binding Path=(local:Config.HostConfigStartup), Mode=TwoWay}">
+                        <TextBlock Text="Load Hosting Config on Startup" Margin="-4,0" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" FontSize="18" TextAlignment="Left"/>
+                    </CheckBox>
+
+                    <!--<CheckBox  Margin="0 12 0 0" VerticalAlignment="Center" IsChecked="{Binding Path=(local:Config.DisableEasterEggs), Mode=TwoWay}">
+                        <TextBlock Text="Disable Easter Eggs" Margin="-4,0" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" FontSize="18" TextAlignment="Left"/>
+                    </CheckBox>-->
                 </StackPanel>
 
                 <StackPanel Grid.Row="3" Orientation="Vertical" Margin="0 10 0 0">
